--- a/data/index.html
+++ b/data/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Arduino Fingerprint Sensor</title>
-    <link rel="stylesheet" href="./css/index.css" />
-  </head>
-  <body>
-    <main>
-      <div class="heading"><h1>Arduino Fingerprint Sensor using ESP32</h1></div>
-      <div class="status">
-        <h2>Status</h2>
-        <hr />
-        <div class="message message-info" id="statusDiv">Scan your Fingerprint</div>
-      </div>
-    </main>
-    <script src="./js/index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Fingerprint Door Lock</title>
+  <link rel="stylesheet" href="./css/index.css" />
+</head>
+
+<body>
+  <main>
+    <div class="heading">
+      <h1>Fingerprint Door lock EC Project</h1>
+    </div>
+    <div class="status">
+      <h2>Status</h2>
+      <hr />
+      <div class="message message-info" id="statusDiv">Scan your Fingerprint</div>
+    </div>
+  </main>
+  <script src="./js/index.js"></script>
+</body>
+
 </html>
